# simple-control

./: .gitignore  Cargo.toml
crosskey/: Cargo.toml
crosskey/src/: lib.rs
src/: capture.rs  main.rs
